--- a/index.html
+++ b/index.html
@@ -61,24 +61,29 @@
             <main></main>
 
             <footer class="container-fluid m-0 p-4">
-                <div class=" container text-center d-flex ">
+                <div class=" container text-center">
                     <p class="h2" style="font-family: 'Mystery Quest'; color: whitesmoke; user-select: none;">MYST</p>
                     <p style="color: brown;">Todos os direitos reservados!</p>
                 </div>
-                <hr class="divider w-50">
-                <div class="container-fluid text-center row d-flex justify-content-center p-0 m-0 py-3">
-                    <div class="col-2">
-                        <p class="pg-anim pg-atual">Home</p>
+                <div class="container-fluid d-flex justify-content-center p-0 m-0">
+                    <hr class="divider" style="width: 65%;">
+                </div>
+                <div class="container-fluid text-center row d-flex justify-content-center align-items-center p-0 m-0 py-3">
+                    <div class="col-2" style="height: 2rem;">
+                        <p class="pg-anim pg-atual d-flex align-items-center justify-content-center" style="height: 100%;">Home</p>
                     </div>
-                    <div class="col-2">
-                        <p class="pg-anim pg-atual">Loja</p>
+                    <div class="col-2" style="height: 2rem;">
+                        <p class="pg-anim pg-atual d-flex align-items-center justify-content-center" style="height: 100%;">Loja</p>
                     </div>
-                    <div class="col-2">
-                        <p class="pg-anim pg-atual">Conheça Nosso Trabalho</p>
+                    <div class="col-2" style="height: 2rem;">
+                        <p class="pg-anim pg-atual d-flex align-items-center justify-content-center" style="height: 100%;">Conheça Nosso Trabalho</p>
                     </div>
-                    <div class="col-2">
+                    <div class="col-2 d-flex align-items-center justify-content-center" style="height: 2rem;">
                         <p class="pg-anim pg-atual">Política de Privacidade</p>
                     </div>
+                </div>
+                <div class="container-fluid d-flex justify-content-center p-0 m-0">
+                    <hr class="divider" style="width: 65%;">
                 </div>
             </footer>
         </div>
