--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Myst - Home</title>
-        <link rel="shortcut icon" href="imgs/myst_logo.svg" type="image/x-icon">
+        <link rel="shortcut icon" href="imgs/icones/myst_logo.svg" type="image/x-icon">
 
         <link rel="stylesheet" href="styles/home.css">
         <link rel="stylesheet" href="styles/polos.css">
@@ -52,9 +52,9 @@
                                 </li>
                                 <li>
                                     <div class="d-flex gap-3">
-                                        <button class="btn btn-dark entrar" type="button">Entrar</button>
+                                        <a href="https://batender.github.io/AtividadeAvaliativa-LOGIN/pages/entrar.html" class="btn btn-dark entrar" type="button">Entrar</a>
                                         <div class="divisao"></div>
-                                        <button class="btn inscrever" type="button">Inscreva-se</button>
+                                        <a href="https://batender.github.io/AtividadeAvaliativa-LOGIN/pages/inscrever.html" class="btn inscrever" type="button">Inscreva-se</a>
                                     </div>
                                 </li>
                             </ul>
@@ -79,7 +79,7 @@
                 </section>
 
                 <section id="opcoes1" class="container-fluid p-0 m-0 py-1 text-center">
-                    <div class="container-fluid row d-flex justify-content-center gap-3 f-wrap py-5">
+                    <div class="container-fluid row d-flex justify-content-center gap-4 f-wrap py-5">
                         <div class="col-3 card p-3 d-flex flex-column align-items-center justify-content-center" style="width: 18rem;">
                             <div class="container d-flex align-items-center p-0 m-0" style="height: 50%;">
                                 <img src="imgs/icones/logo-branco-comunidade.svg" class="card-img-top" alt="..." style="height: 100%;">
@@ -97,33 +97,69 @@
                             <div class="container card-body d-flex flex-column justify-content-center p-0 m-0" style="height: 50%;">
                                 <h5 class="card-title">LOJA VARIADA</h5>
                                 <hr>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <p class="card-text">Diversos tipos de produtos.</p>
                             </div>
                         </div>
                         <div class="col-3 card p-3 d-flex flex-column align-items-center justify-content-center" style="width: 18rem;">
                             <div class="container d-flex align-items-center p-0 m-0" style="height: 50%;">
-                                <img src="imgs/icones/logo-branco-comunidade.svg" class="card-img-top" alt="..." style="height: 100%;">
+                                <img src="imgs/icones/logo-branco-anonimo.svg" class="card-img-top" alt="..." style="height: 100%;">
                             </div>
                             <div class="container card-body d-flex flex-column justify-content-center p-0 m-0" style="height: 50%;">
                                 <h5 class="card-title">ANONIMATO</h5>
                                 <hr>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <p class="card-text">Aqui, nós nos preocupamos com suas informações e mantemos elas protegidas.</p>
                             </div>
                         </div>
                         <div class="col-3 card p-3 d-flex flex-column align-items-center justify-content-center" style="width: 18rem;">
                             <div class="container d-flex align-items-center p-0 m-0" style="height: 50%;">
-                                <img src="imgs/icones/logo-branco-comunidade.svg" class="card-img-top" alt="..." style="height: 100%;">
+                                <img src="imgs/icones/logo-branco-alvo.svg" class="card-img-top" alt="..." style="height: 100%;">
                             </div>
                             <div class="container card-body d-flex flex-column justify-content-center p-0 m-0" style="height: 50%;">
                                 <h5 class="card-title">DESAFIOS SEMANAIS</h5>
                                 <hr>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <p class="card-text">Desafios novos todas as semanas</p>
                             </div>
                         </div>
                     </div>
                 </section>
 
-                <section id="opcoes2" class="container-fluid p-0 m-0 py-1 text-center"></section>
+                <section id="opcoes2" class="container-fluid p-0 m-0 py-5 text-center">
+                    <p class="h2" style="color: var(--Onyx);">O QUE VOCÊ VAI ENCONTRAR AQUI?</p>
+                    <div class="container-fluid m-0 p-0 text-center row d-flex gap-4 justify-content-center align-items-center" style="height: 80%;">
+                        <div class="card text-center my-2 col-3" style="">
+                            <div class="card-body">
+                                <h3 class="card-title">PRODUTOS</h3>
+                                <a href="pages/loja.html" class="btn btn-primary">comprar</a>
+                            </div>
+                        </div>
+                        <div class="card text-center my-2 col-3" style="">
+                            <div class="card-body">
+                                <h3 class="card-title">PESSOAS</h3>
+                                <a href="#" class="btn btn-primary">conversar</a>
+                            </div>
+                        </div>
+                        <div class="card text-center my-2 col-3" style="">
+                            <div class="card-body">
+                                <h3 class="card-title">DESAFIOS</h3>
+                                <a href="#" class="btn btn-primary">ver desafios</a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <section id="acesso" class="container-fluid m-0 p-4 text-center" style="height: 20rem; background-color: var(--French-gray1);">
+                    <div class="conatiner-fluid m-0 p-0 d-flex flex-column gap-2" style="height: 50%;">
+                        <p class="h3" style="color: var(--Onyx);">GOSTOU DO QUE VIU?</p>
+                        <p class="h6" style="color: var(--Slate-gray);">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, accusamus nulla. Mollitia, fuga consequuntur rem omnis reiciendis recusandae doloremque alias blanditiis reprehenderit distinctio, ipsum odio repellat asperiores, quas pariatur similique?</p>
+                    </div>
+                    <div class="conatiner-fluid m-0 p-0 d-flex align-items-center justify-content-center"style="height: 50%;">
+                        <div class="d-flex gap-3">
+                            <a href="https://batender.github.io/AtividadeAvaliativa-LOGIN/pages/entrar.html" class="btn btn-dark" type="button">Entrar</a>
+                            <div class="divisao"></div>
+                            <a href="https://batender.github.io/AtividadeAvaliativa-LOGIN/pages/inscrever.html" class="btn btn-light" type="button">Inscrever-se</a>
+                        </div>
+                    </div>
+                </section>
             </main>
 
             <footer class="container-fluid m-0 p-3">
@@ -138,16 +174,16 @@
 
                 <div class="container-fluid text-center row d-flex justify-content-center align-items-center p-0 m-0 py-5">
                     <div class="col-3" style="height: 2rem;">
-                        <p class="pg-anim pg-atual d-flex align-items-center justify-content-center" style="height: 100%;">Home</p>
+                        <a href="#logo" class="pg-anim pg-atual d-flex align-items-center justify-content-center" style="height: 100%;">Home</a>
                     </div>
                     <div class="col-3" style="height: 2rem;">
-                        <p class="pg-anim pg-atual d-flex align-items-center justify-content-center" style="height: 100%;">Loja</p>
+                        <a href="pages/loja.html" class="pg-anim pg-atual d-flex align-items-center justify-content-center" style="height: 100%;">Loja</a>
                     </div>
                     <div class="col-3" style="height: 2rem;">
-                        <p class="pg-anim pg-atual d-flex align-items-center justify-content-center" style="height: 100%;">Conheça Nosso Trabalho</p>
+                        <a href="pages/sobreNos.html" class="pg-anim pg-atual d-flex align-items-center justify-content-center" style="height: 100%;">Conheça o nosso trabalho</a>
                     </div>
                     <div class="col-3 d-flex align-items-center justify-content-center" style="height: 2rem;">
-                        <p class="pg-anim pg-atual">Política de Privacidade</p>
+                        <a href="" class="pg-anim pg-atual d-flex align-items-center justify-content-center" style="height: 100%;">Política de privacidade</a>
                     </div>
                 </div>
                 
@@ -155,27 +191,27 @@
                     <hr class="divider" style="width: 95%;">
                 </div> -->
 
-                <div class="container-fluid p-0 py-4 m-0 text-center">
+                <div id="pagamento" class="container-fluid p-0 py-4 m-0 text-center">
                     <div class="container-fluid py-4 m-0">
                         <p class="h3" style="color: var(--Slate-gray);">Formas de pagamento aceitas</p>
                     </div>
                     <div class="container-fluid row d-flex justify-content-center align-items-center m-0 p-0">
-                        <div class="col-1" style="height: 4rem;">
+                        <div class="col-2" style="height: 4rem;">
                             <a href="" class="d-flex align-items-center" style="height: 100%;">
                                 <img src="imgs/icones/paypal.svg" alt="" class="w-100" style="height: 100%;">
                             </a>
                         </div>
-                        <div class="col-1" style="height: 4rem;">
+                        <div class="col-2" style="height: 4rem;">
                             <a href="" class="d-flex align-items-center" style="height: 100%;">
                                 <img src="imgs/icones/pix.svg" alt="" class="w-100" style="height: 100%;">
                             </a>
                         </div>
-                        <div class="col-1" style="height: 4rem;">
+                        <div class="col-2" style="height: 4rem;">
                             <a href="" class="d-flex align-items-center" style="height: 100%;">
                                 <img src="imgs/icones/visa.svg" alt="" class="w-100" style="height: 100%;">
                             </a>
                         </div>
-                        <div class="col-1" style="height: 4rem;">
+                        <div class="col-2" style="height: 4rem;">
                             <a href="" class="d-flex align-items-center" style="height: 100%;">
                                 <img src="imgs/icones/mastercard.svg" alt="" class="w-100" style="height: 100%;">
                             </a>
