--- a/pages/loja.html
+++ b/pages/loja.html
@@ -72,10 +72,10 @@
                         </ol>
                     </div>
                     <div class="w-50 d-flex justify-content-center align-items-center" style="height: 100%;">
-                        <button type="button" class="btn btn-outline-info d-flex justify-content-center align-items-center gap-2" style="height: 30%;">
-                            <img src="../imgs/icones/logo-branco-carrinho.svg" alt="">
-                            <p class="h6 d-flex align-items-center justify-content-center" style="height: 100%;">Carrinho</p>
-                        </button>
+                        <a href="carrinho.html" class="btn btn-outline-dark d-flex justify-content-center align-items-center gap-3 m-0 w-25" style="height: 30%;">
+                            <img src="../imgs/icones/logo-branco-carrinho.svg" alt="" class="h-100">
+                            <p class="h6 d-flex m-0 align-items-center" style="height: 100%;">Carrinho</p>
+                        </a>
                     </div>
                 </section>
 
