--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 <p class="card-text">Buscam resolver problemas junto da comunidade.</p>
                             </div>
                         </div>
-                        <div class="col-3 card p-3 d-flex flex-column align-items-center justify-content-center" style="width: 18rem;">
+                        <div class="col-3 card p-3 d-flex flex-column align-items-center justify-content-center" style="width: 18rem; background-color: var(--Slate-gray) !important;">
                             <div class="container d-flex align-items-center p-0 m-0" style="height: 50%;">
                                 <img src="imgs/icones/logo-branco-carrinho.svg" class="card-img-top" alt="..." style="height: 100%;">
                             </div>
@@ -110,7 +110,7 @@
                                 <p class="card-text">Aqui, nós nos preocupamos com suas informações e mantemos elas protegidas.</p>
                             </div>
                         </div>
-                        <div class="col-3 card p-3 d-flex flex-column align-items-center justify-content-center" style="width: 18rem;">
+                        <div class="col-3 card p-3 d-flex flex-column align-items-center justify-content-center" style="width: 18rem; background-color: var(--Slate-gray) !important;">
                             <div class="container d-flex align-items-center p-0 m-0" style="height: 50%;">
                                 <img src="imgs/icones/logo-branco-alvo.svg" class="card-img-top" alt="..." style="height: 100%;">
                             </div>
