--- a/pages/loja.html
+++ b/pages/loja.html
@@ -72,7 +72,7 @@
                         </ol>
                     </div>
                     <div class="w-50 d-flex justify-content-center align-items-center" style="height: 100%;">
-                        <a href="carrinho.html" class="btn btn-outline-dark d-flex justify-content-center align-items-center gap-3 m-0 w-25" style="height: 30%;">
+                        <a href="carrinho.html" class="btn btn-outline-dark d-flex justify-content-center align-items-center gap-3 m-0 w-lg-25 w-md-50" style="height: 30%;">
                             <img src="../imgs/icones/logo-branco-carrinho.svg" alt="" class="h-100">
                             <p class="h6 d-flex m-0 align-items-center" style="height: 100%;">Carrinho</p>
                         </a>
@@ -461,6 +461,8 @@
 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+        <script src="../js/jquery-3.7.1.js"></script>
         <script src="../js/index.js"></script>
+        <script src="../js/loja.js"></script>
     </body>
 </html>
