--- a/pages/pagamento.html
+++ b/pages/pagamento.html
@@ -65,7 +65,7 @@
 
             <main class="container-fluid p-0 m-0">
                 <section id="local" class="container-fluid px-2 py-1 d-flex flex-wrap" style="height: 10rem; background-color: var(--Slate-gray);">
-                    <div class="w-lg-50 w-md-75 d-flex justify-content-center align-items-center " style="--bs-breadcrumb-divider: '>'; height: 100%;" aria-label="breadcrumb">
+                    <div class="w-50 w-lg-50 w-md-75 d-flex justify-content-center align-items-center " style="--bs-breadcrumb-divider: '>'; height: 100%;" aria-label="breadcrumb">
                         <ol class="breadcrumb">
                           <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
                           <li class="breadcrumb-item"><a href="loja.html">Loja</a></li>
@@ -91,9 +91,9 @@
                     <p class="h5 w-100 text-start">Qual a forma de pagamento preferida?</p>
                     <div class="container-fluid m-0 p-1 row" style="height: 6rem;">
                         <div class="col-3 d-flex align-items-center justify-content-center h-100">
-                            <div class="container-fluid p-0 m-0 h-100 d-flex justify-content-center">
+                            <div class="container-fluid p-0 m-0 h-100 w-100 d-flex justify-content-center">
                                 <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off">
-                                <label class="btn btn-outline-secondary h-100 w-lg-75 w-md-100" for="option1">
+                                <label class="btn btn-outline-secondary h-100 w-75 w-lg-75 w-md-100" for="option1">
                                     <img src="../imgs/icones/mastercard.svg" alt="" class="h-100 w-75">
                                 </label>
                             </div>
@@ -102,7 +102,7 @@
                         <div class="col-3 d-flex align-items-center justify-content-center h-100">
                             <div class="container-fluid p-0 m-0 h-100 d-flex justify-content-center">
                                 <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off">
-                                <label class="btn btn-outline-secondary h-100 w-lg-75 w-md-100" for="option2">
+                                <label class="btn btn-outline-secondary h-100 w-75 w-lg-75 w-md-100" for="option2">
                                     <img src="../imgs/icones/visa.svg" alt="" class="h-100 w-75">
                                 </label>
                             </div>
@@ -110,7 +110,7 @@
                         <div class="col-3 d-flex align-items-center justify-content-center h-100">
                             <div class="container-fluid p-0 m-0 h-100 d-flex justify-content-center">
                                 <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off">
-                                <label class="btn btn-outline-secondary h-100 w-lg-75 w-md-100" for="option3">
+                                <label class="btn btn-outline-secondary h-100 w-75 w-lg-75 w-md-100" for="option3">
                                     <img src="../imgs/icones/paypal.svg" alt="" class="h-100 w-75">
                                 </label>
                             </div>
@@ -118,7 +118,7 @@
                         <div class="col-3 d-flex align-items-center justify-content-center h-100">
                             <div class="container-fluid p-0 m-0 h-100 d-flex justify-content-center">
                                 <input type="radio" class="btn-check" name="options" id="option4" autocomplete="off" checked>
-                                <label class="btn btn-outline-secondary h-100 w-lg-75 w-md-100" for="option4">
+                                <label class="btn btn-outline-secondary h-100 w-75 w-lg-75 w-md-100" for="option4">
                                     <img src="../imgs/icones/pix.svg" alt="" class="h-100 w-75">
                                 </label>
                             </div>
@@ -158,9 +158,9 @@
                             </div>
                         </div>
 
-                        <div class="container-fluid p-0 d-flex justify-content-between">
-                            <a href="carrinho.html" class="btn btn-outline-danger w-25">Continuar comprando</a>
-                            <button type="submit" class="btn btn-outline-secondary w-lg-25 w-md-50">Submit</button>
+                        <div class="container-fluid p-0 d-flex justify-content-between gap-3">
+                            <a href="carrinho.html" class="btn btn-outline-danger w-50">Continuar comprando</a>
+                            <button type="submit" class="btn btn-outline-secondary w-50">Submit</button>
                         </div>
                     </form>
                 </section>
