--- a/pages/carrinho.html
+++ b/pages/carrinho.html
@@ -9,7 +9,7 @@
 
         <link rel="stylesheet" href="../styles/home.css">
         <link rel="stylesheet" href="../styles/polos.css">
-        <link rel="stylesheet" href="../styles/carrinho.css">
+        <link rel="stylesheet" href="../styles/carrinho-mobile.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
     <body>
@@ -17,7 +17,6 @@
             <header class="container-fluid m-0 p-0">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        
                             <a id="logo" class="navbar-brand" href="#">MYST</a>
                             <button class="navbar-toggler d-lg-none d-md-flex justify-content-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
@@ -82,15 +81,15 @@
                     </div>
                 </section>
 
-                <section id="cartTable" class="container-fluid px-2 py-4 d-flex flex-wrap">
-                    <table class="table table-dark mb-0">
-                        <thead>
-                          <tr>
+                <section id="cartTable" class="container-fluid px-lg-3 px-md-2 px-1 py-4 d-flex flex-wrap">
+                    <table class="table table-dark mb-0 d-none d-lg-table justify-content-center">
+                        <thead class="w-100">
+                          <tr class="w-100">
                             <th scope="col" style="width: 40%;">Descrição</th>
                             <th scope="col" style="width: 16%; text-align: center;">Quantidade</th>
                             <th scope="col" style="width: 16%; text-align: center;">Preço</th>
                             <th scope="col" style="width: 16%; text-align: center;">Subtotal</th>
-                            <th scope="col" style="width: 12%; text-align: center;">Cancelar</th>
+                            <th scope="col" style=" width: 12%; text-align: center;">Cancelar</th>
                           </tr>
                         </thead>
                         <tbody>
@@ -120,7 +119,7 @@
                             </td>
                             <td style="width: 16%;">
                                 <div class="w-100 p-2 d-flex justify-content-center align-items-center gap-1" style="height: 15rem;">
-                                    <p class="h4" style="color: var(--French-gray1);">R$0,00</p>
+                                    <p class="h4" style="color: var(--French-gray1);">R$<span class="precoProduto"></span>0,00</p>
                                 </div>
                             </td>
                             <td style="width: 16%;">
@@ -221,7 +220,111 @@
                             </td>
                           </tr>
                         </tbody>
-                      </table>
+                    </table>
+
+                    <div class="container-fluid m-0 p-0 d-lg-none d-md-flex d-sm-flex flex-column gap-4">
+                        <div class="container-fluid m-0 p-2 d-flex border border-dark rounded-4">
+                            <div class="bg-secondary rounded" style="height: 18rem; width: 40%;"></div>
+                            <div class="px-3 d-flex flex-column justify-content-center gap-3" style="width: 60%;">
+                                <div class="container-fluid p-0 m-0 d-flex justify-content-end">
+                                    <img src="../imgs/icones/x-circle-fill.svg" alt="">
+                                </div>
+                                <p class="w-100 h3 text-center" style="color: var(--French-gray1);">Nome-produto</p>
+                                <div class="contatiner-fluid p-0 m-0">
+                                    <div class="container-fluid p-0 m-0 mb-2 d-flex gap-3">
+                                        <p class="h6 w-50 text-center fw-bold" style="color: var(--Platinum);">Cor: <span style="color: var(--French-gray1);">Tons de cinza</span></p>
+                                        <p class="h6 w-50 text-center fw-bold" style="color: var(--Platinum);">Tipo: <span style="color: var(--French-gray1);">Tons de cinza</span></p>
+                                    </div>
+                                    <div class="container-fluid p-0 m-0 d-flex gap-3">
+                                        <p class="h6 w-50 text-center fw-bold" style="color: var(--Platinum);">ID: <span style="color: var(--French-gray1);">982734920</span></p>
+                                        <p class="h6 w-50 text-center fw-bold" style="color: var(--French-gray2);">EM ESTOQUE</p>
+                                    </div>
+                                </div>
+                                <div class="container-fluid m-0 p-0 pt-2 d-flex">
+                                    <div class="w-50 d-flex justify-content-center align-items-center h-100 gap-2">
+                                        <div class="p-2 d-flex justify-content-center aligh-items-center gap-1 border border-dark rounded" style="height: 90%; width: 90%;">
+                                            <button type="button" class="adicionar btn d-flex aligh-items-center">
+                                                <img src="../imgs/icones/caret-down-fill.svg" alt="">
+                                            </button>
+                                            <span class="numero">0</span>
+                                            <button type="button" class="remover= btn d-flex aligh-items-center">
+                                                <img src="../imgs/icones/caret-up-fill.svg" alt="">
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <p class="w-50 h2 text-center m-0 pt-2" style="color: var(--French-gray1);">R$<span class="precoProduto">0,00</span></p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="container-fluid m-0 p-2 d-flex border border-dark rounded-4">
+                            <div class="bg-secondary rounded" style="height: 18rem; width: 40%;"></div>
+                            <div class="px-3 d-flex flex-column justify-content-center gap-3" style="width: 60%;">
+                                <div class="container-fluid p-0 m-0 d-flex justify-content-end">
+                                    <img src="../imgs/icones/x-circle-fill.svg" alt="">
+                                </div>
+                                <p class="w-100 h3 text-center" style="color: var(--French-gray1);">Nome-produto</p>
+                                <div class="contatiner-fluid p-0 m-0">
+                                    <div class="container-fluid p-0 m-0 mb-2 d-flex gap-3">
+                                        <p class="h6 w-50 text-center fw-bold" style="color: var(--Platinum);">Cor: <span style="color: var(--French-gray1);">Tons de cinza</span></p>
+                                        <p class="h6 w-50 text-center fw-bold" style="color: var(--Platinum);">Tipo: <span style="color: var(--French-gray1);">Tons de cinza</span></p>
+                                    </div>
+                                    <div class="container-fluid p-0 m-0 d-flex gap-3">
+                                        <p class="h6 w-50 text-center fw-bold" style="color: var(--Platinum);">ID: <span style="color: var(--French-gray1);">982734920</span></p>
+                                        <p class="h6 w-50 text-center fw-bold" style="color: var(--French-gray2);">EM ESTOQUE</p>
+                                    </div>
+                                </div>
+                                <div class="container-fluid m-0 p-0 pt-2 d-flex">
+                                    <div class="w-50 d-flex justify-content-center align-items-center h-100 gap-2">
+                                        <div class="p-2 d-flex justify-content-center aligh-items-center gap-1 border border-dark rounded" style="height: 90%; width: 90%;">
+                                            <button type="button" class="adicionar btn d-flex aligh-items-center">
+                                                <img src="../imgs/icones/caret-down-fill.svg" alt="">
+                                            </button>
+                                            <span class="numero">0</span>
+                                            <button type="button" class="remover= btn d-flex aligh-items-center">
+                                                <img src="../imgs/icones/caret-up-fill.svg" alt="">
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <p class="w-50 h2 text-center m-0 pt-2" style="color: var(--French-gray1);">R$<span class="precoProduto">0,00</span></p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="container-fluid m-0 p-2 d-flex border border-dark rounded-4">
+                            <div class="bg-secondary rounded" style="height: 18rem; width: 40%;"></div>
+                            <div class="px-3 d-flex flex-column justify-content-center gap-3" style="width: 60%;">
+                                <div class="container-fluid p-0 m-0 d-flex justify-content-end">
+                                    <img src="../imgs/icones/x-circle-fill.svg" alt="">
+                                </div>
+                                <p class="w-100 h3 text-center" style="color: var(--French-gray1);">Nome-produto</p>
+                                <div class="contatiner-fluid p-0 m-0">
+                                    <div class="container-fluid p-0 m-0 mb-2 d-flex gap-3">
+                                        <p class="h6 w-50 text-center fw-bold" style="color: var(--Platinum);">Cor: <span style="color: var(--French-gray1);">Tons de cinza</span></p>
+                                        <p class="h6 w-50 text-center fw-bold" style="color: var(--Platinum);">Tipo: <span style="color: var(--French-gray1);">Tons de cinza</span></p>
+                                    </div>
+                                    <div class="container-fluid p-0 m-0 d-flex gap-3">
+                                        <p class="h6 w-50 text-center fw-bold" style="color: var(--Platinum);">ID: <span style="color: var(--French-gray1);">982734920</span></p>
+                                        <p class="h6 w-50 text-center fw-bold" style="color: var(--French-gray2);">EM ESTOQUE</p>
+                                    </div>
+                                </div>
+                                <div class="container-fluid m-0 p-0 pt-2 d-flex">
+                                    <div class="w-50 d-flex justify-content-center align-items-center h-100 gap-2">
+                                        <div class="p-2 d-flex justify-content-center aligh-items-center gap-1 border border-dark rounded" style="height: 90%; width: 90%;">
+                                            <button type="button" class="adicionar btn d-flex aligh-items-center">
+                                                <img src="../imgs/icones/caret-down-fill.svg" alt="">
+                                            </button>
+                                            <span class="numero">0</span>
+                                            <button type="button" class="remover= btn d-flex aligh-items-center">
+                                                <img src="../imgs/icones/caret-up-fill.svg" alt="">
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <p class="w-50 h2 text-center m-0 pt-2" style="color: var(--French-gray1);">R$<span class="precoProduto">0,00</span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </section>
 
                 <section id="cartTotal" class="container-fluid m-0 px-2 py-4 d-flex flex-wrap" style="background-color: var(--Slate-gray)">
