--- a/pages/carrinho.html
+++ b/pages/carrinho.html
@@ -410,15 +410,15 @@
                             <tbody>
                               <tr>
                                 <th scope="row" class="h3 text-end">Subtotal</th>
-                                <td class="h4 text-end" style="color: var(--French-gray2);">R$<span id="subtotalTotal">0,00</span></td>
+                                <td class="h4 text-end" style="color: var(--French-gray2);">R$<span id="subtotalTotal1">0,00</span></td>
                               </tr>
                               <tr>
                                 <th scope="row" class="h3 text-end">Frete</th>
-                                <td class="h4 text-end" style="color: var(--French-gray2);">R$<span id="freteTotal">0,00</span></td>
+                                <td class="h4 text-end" style="color: var(--French-gray2);">R$<span id="freteTotal1">0,00</span></td>
                               </tr>
                               <tr>
                                 <th scope="row" class="h2 text-end">TOTAL</th>
-                                <td class="h3 text-end" style="color: var(--French-gray2);">R$<span id="total">0,00</span></td>
+                                <td class="h3 text-end" style="color: var(--French-gray2);">R$<span id="total1">0,00</span></td>
                               </tr>
                             </tbody>
                           </table>
@@ -494,17 +494,17 @@
                     <div class="container-fluid my-3 p-0 d-flex flex-column d-lg-none flex-wrap">
                         <div class="container-fluid m-0 p-4 d-flex justify-content-between align-items-center">
                             <p class="h3">Subtotal</p>
-                            <p class="h4" style="color: var(--French-gray2);">R$<span id="subtotalTotal">0,00</span></p>
+                            <p class="h4" style="color: var(--French-gray2);">R$<span id="subtotalTotal2">0,00</span></p>
                         </div>
                         <hr class="w-100">
                         <div class="container-fluid m-0 p-4 d-flex justify-content-between align-items-center">
                             <p class="h3">Frete</p>
-                            <p class="h4" style="color: var(--French-gray2);">R$<span class="freteTotal">0,00</span></p>
+                            <p class="h4" style="color: var(--French-gray2);">R$<span class="freteTotal2">0,00</span></p>
                         </div>
                         <hr class="w-100">
                         <div class="container-fluid m-0 p-4 d-flex justify-content-between align-items-center">
                             <p class="h3">Total</p>
-                            <p class="h4" style="color: var(--French-gray2);">R$<span id="total">0,00</span></p>
+                            <p class="h4" style="color: var(--French-gray2);">R$<span id="total2">0,00</span></p>
                         </div>
                         <div class="container-fluid m-0 p-2 d-flex justify-content-between align-items-center justify-content-center gap-4">
                             <a href="loja.html" class="w-50 m-0 btn btn-outline-danger d-flex align-items-center justify-content-center h4">Escolher mais produtos</a>
